@@ -1,21 +1,12 @@
 {# vim:set softtabstop=2: -#}
+{% set wx = True %}
 {% set title = '403 Forbidden' -%}
 {#% set refresh = 15 %#}
 {% include "_header.html" %}
 
-    <div class="container">
-      <div class="jumbotron http-error">
-        <h1>{{ title }}</h1>
-        <p>
-          You don not have permission to access <code>{{ this_uri }}</code>
-          on this server.
-        </p>
-      </div>
-    </div>
-
-  </div>
-
-  <footer class="footer mt-auto py-3">
-      <div class="container">
+           <h1>{{ title }}</h1>
+            <p>
+              You don not have permission to access this.
+            </p>
 
 {% include "_footer.html" %}
