@@ -1,30 +1,26 @@
 {# vim:set softtabstop=2: -#}
+{% set wx = True %}
 {% set title = '500 Internal Server Error' -%}
 {#% set refresh = 15 %#}
 {% include "_header.html" %}
 
-    <div class="container">
-      <div class="jumbotron http-error">
         <h1>{{ title }}</h1>
         <p>
           We're sorry, but there is a error in service.
           <br /><br />Please try again later.
         </p>
-      </div>
 
-    {% if debug %}
-      <h2> Exception Traceback</h2>
-      <pre class="striped">
+ {% if debug %}
+        </td>
+        <td></td>
+      </tr>
+      <tr><td></td>
+          <td><h2> Exception Traceback</h2>
+              <pre class="striped">
 {%- for line in traceback -%}
 <div>{{ line }}</div>
 {%- endfor -%}
-      </pre>
+              </pre>
     {% endif %}
-    </div>
-
-  </div>
-
-  <footer class="footer mt-auto py-3">
-      <div class="container">
 
 {% include "_footer.html" %}
