@@ -1,20 +1,13 @@
 {# vim:set softtabstop=2: -#}
+{% set wx = True %}
 {% set title = '503 Service Unavailable' -%}
 {#% set refresh = 15 %#}
 {% include "_header.html" %}
 
-    <div class="container">
-      <div class="jumbotron http-error">
         <h1>{{ title }}</h1>
         <p>
-          Prusa Link not finished initializing. Please try again later.
+          PrusaLink not finished initializing or Printer not connected.
+          Please try again later.
         </p>
-      </div>
-    </div>
-
-  </div>
-
-  <footer class="footer mt-auto py-3">
-      <div class="container">
 
 {% include "_footer.html" %}
